<resources>
    <string name="app_name">TClone</string>
    <string name="StartupButtonLogin">Login</string>
    <string name="StartupButtonSignup">Signup</string>
    <string name="hintEmail">Email</string>
    <string name="hintPassword">Password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_age">Age</string>
    <string name="hint_gender">I am a</string>
    <string name="hint_man">Man</string>
    <string name="hint_woman">Woman</string>
    <string name="hint_preferred_gender">Looking for a</string>
    <string name="text_signout">Signout</string>
    <string name="text_apply">Apply</string>
    <string name="error_profile_incomplete">Please complete your profile</string>
    <string name="no_available_users">No available users</string>
    <string name="match_text">Match!</string>
</resources>